--- a/src/components/Hotels/Hotel/Hotel.module.css
+++ b/src/components/Hotels/Hotel/Hotel.module.css
@@ -1,13 +1,14 @@
 .hotel {
   margin-bottom: 20px;
-  background-color: rgb(236 236 236);
+  background-color: gainsboro;
 }
 .title {
   font-weight: bold;
   font-size: 1.2rem;
   margin-bottom: 0;
 }
-.description {
+
+.description{
   color: grey;
   margin-top: 10px;
   font-size: 0.88rem;
